# mmo

./: .clang-format  .gitignore  CMakeLists.txt  INFRASTRUCTURE.md  Makefile  PROTOCOL.md  README.md  ansi_art.txt  client.py  justified.c  log.txt  mmo-client.py  test
client/: CMakeLists.txt
inc/ae/: app.h  arr.h  hex.h  io.h  item.h  literal.h  log.h  map.h  meta.h  net.h  string.h
inc/mmo/: app.h  arr.h  core.h  game.h  input.h  io.h  literal.h  log.h  map.h  meta.h  net.h  packet.h  render.h  state.h  str.h  string.h  telnet.h
inc/mmo/arr/: bmp_pixel.h  bool.h  char.h  char_arr.h  client.h  client_handle.h  client_input.h  player.h  pollfd.h  template.h
inc/mmo/list/: char_arr.h  char_span.h  player_state.h  string.h  template.h
inc/mmo/state/: login.h  state.h
inc/mmo/ui/: elem.h  input.h
res/: fishing.ans  login.ans
server/: CMakeLists.txt
server/inc/mmo/: arr.h  cell_arr.h  char_arr.h  char_arr_arr.h  char_arr_list.h  char_arr_view_list.h  client_arr.h  client_handle_arr.h  client_input_arr.h  game.h  list.h  log.h  login_state.h  mem.h  net.h  packet.h  player_arr.h  player_state.h  pollfd_arr.h  render.h  str.h  string.h  telnet.h  ui.h
server/inc/mmo/arr/: cell.h  char.h  char_arr.h  client.h  client_handle.h  client_input.h  player.h  pollfd.h  telopt.h  template.h
server/inc/mmo/list/: char_arr.h  char_arr_view.h  player_state.h  template.h
server/inc/mmo/state/: login.h  state.h  telnet_negotiation.h
server/inc/mmo/ui/: elem.h  input.h
server/src/: codegen.c  game.c  log.c  login_state.c  main.c  mem.c  net.c  packet.c  render.c  str.c  string.c  telnet.c
server/src/state/: login.c  telnet_negotiation.c
src/: app.c  arr.c  client.c  codegen.c  core.c  game.c  greeting.ans  input.c  io.c  log.c  main.c  net.c  packet.c  render.c  state.c  str.c  string.c  telnet.c  test.c
src/state/: greeting.c  login.c  main_game.c  signup.c
